--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -5,26 +5,26 @@ highlight_color: '#3498db'
 
 # Profile links on the left sidebar, leave blank to ignore
 social:
-  github: anubhav10
+  github: swanson
   #bitbucket: philipj
-  # hacker_news: swanson
+  hacker_news: swanson
   #stackexchange: 348619
   #stackoverflow: 348619
-  # twitter: _swanson
-  facebook: guptanubhav
+  twitter: _swanson
+  #facebook: zuck
   #tumblr: animalygifs
   #linkedin: philipjagielski
   #gplus: 110552447039675960964
   #gravatar: 86e6ff8f75f9daef42d53b7f8002fd95
   #flickr: johndoe
 
- "Hi, I'm _______"
-name: Anubhav Gupta
-email: gupta.anubhav@live.in
-tagline: "not your regular dot net developer"
+# "Hi, I'm _______"
+name: Matt Swanson
+email: test@example.com
+tagline: "weak opinions, strongly held"
 
 # Google Analytics key, leave blank to ignore
-# google_analytics_key: UA-xxxx-x
+google_analytics_key: UA-xxxx-x
 
 # Toggle "Postings are my own" disclaimer in footer
 show_disclaimer: true
